--- a/.generators/templates/stories.tsx.hbs
+++ b/.generators/templates/stories.tsx.hbs
@@ -1,9 +1,9 @@
 import { Meta, StoryObj } from '@storybook/react'
 
-import {{pascalCase name}}, { {{pascalCase name}}Skeleton } from '.'
+import {{pascalCase name}} from '.'
 
 const meta: Meta<typeof {{pascalCase name}}> = {
-  title: '{{pascalCase name}}',
+  title: 'UI / {{pascalCase name}}',
   component: {{pascalCase name}},
   tags: ['autodocs'],
   args: {}
@@ -11,12 +11,7 @@ const meta: Meta<typeof {{pascalCase name}}> = {
 
 type Story = StoryObj<typeof {{pascalCase name}}>
 
-export const Primary: Story = {
-  args: {}
-}
-
-export const Skeleton: Story = {
-  render: () => <{{pascalCase name}}Skeleton />,
+export const Default: Story = {
   args: {}
 }
 
