--- a/.generators/templates/test.tsx.hbs
+++ b/.generators/templates/test.tsx.hbs
@@ -1,12 +1,13 @@
 import '@testing-library/jest-dom'
 
-import { render, screen } from '@testing-library/react'
+import { screen } from '@testing-library/react'
+import { renderWithTheme } from 'utils/tests/helpers'
 
 import {{pascalCase name}} from '.'
 
 describe('<{{pascalCase name}} />', () => {
   it('should render the heading', () => {
-    const { container } = render(<{{pascalCase name}} />)
+    const { container } = renderWithTheme(<{{pascalCase name}} />)
 
     expect(
       screen.getByRole('heading', { name: /{{lowerCase name}}/i })
